[tool.poetry]
name = "100-days-of-code"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
Markdown = "^3.3.7"
pandas = "^1.4.3"
icecream = "^2.1.2"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
